--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
   shared_preferences: ^2.2.2
   connectivity_plus: ^5.0.2
   flutter_svg_provider: ^1.0.7
+  google_maps_flutter: ^2.9.0
+  mobx: ^2.3.3+2
+  mobx_codegen: ^2.6.1
+  flutter_mobx: ^2.2.1+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
